--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
     "url": "git://github.com/metropolislights/webgl-editor.git"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#1.1.5"
   }
 }
