--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
     "express": "4.13.3",
     "morgan": "1.6.1",
     "three.js": "0.72.0"
+  },
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "gulp-jscs": "3.0.1"
+  },
+  "scripts": {
+    "lint": "gulp lint"
   }
 }
