Add "setup" and "server" npm scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-jscs": "3.0.1"
   },
   "scripts": {
+    "setup": "npm install && bower install",
+    "server": "node app.js",
     "lint": "gulp lint"
   }
 }
