Configure Heroku deployment
Allow Heroku to specify a port in its environment.

Specifying Bower as a dependency, and then immediately running it in the
postinstall script doesn't work for some reason, so the preinstall
script works around that issue.

Update the quick start guide in README.md to reflect the above changes.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "gulp-jscs": "3.0.1"
   },
   "scripts": {
-    "setup": "npm install && bower install",
-    "server": "node app.js",
+    "preinstall": "npm install bower",
+    "postinstall": "bower install",
+    "start": "node app.js",
     "lint": "gulp lint"
   }
 }
