--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "url": "git://github.com/metropolislights/webgl-editor.git"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#1.1.5"
+    "polymer": "Polymer/polymer#1.1.5",
+    "iron-icons": "PolymerElements/iron-icons#1.0.4"
   }
 }
